# faces

./: Dockerfile  config.yml  main.py  openapi.json  pyproject.toml
app/api/: dependencies.py  main.py
app/api/routes/: ping.py  search.py  vectorize.py
app/core/: config.py  face_item.py  image_meta.py  index.py  responses.py  storage.py
indexer/: config.yml  docker-compose.yml  pyproject.toml
indexer/scripts/: bootstrap.py  search.py
indexer/src/: main.py
infrastructure/k8s/: all.yml  deployment.yml  hpa.yml  ingress.yml  service.yml
scripts/: bootstrap.py  config.py  config.yml  docker-compose.yml  milvus-standalone.yml  request_embed_status.py  request_remove.py  request_remove_all.py  request_search.py  values-minikube.yaml
scripts/bootstrap/: db.py  s3.py  vectorize.py
search/: main.py  pyproject.toml
search/app/api/: main.py
search/app/api/routes/: search.py
search/app/core/: config.py  index.py
vectorize/: Dockerfile  config.yml  docker-compose.yml  pyproject.toml
vectorize/app/api/: dependencies.py  main.py  tools.py
vectorize/app/api/routes/: vectorize.py
vectorize/app/core/: config.py  index.py  storage.py
